templates/primary/allow-db-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-postgres-metrics
  namespace: postgres
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-postgres
      app.kubernetes.io/name: postgresql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - protocol: TCP
      port: 9187
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: webapp-consumer
    ports:
    - protocol: TCP
      port: 5432
